test/function/error/number_of_argument.c
void f(int a){
    printf("funzione f \n");
}

void main(){
    int a = 1, b = 2;
    f();
    f(a, b);
}